<resources>
    <string name="app_name">Sharingang</string>
    <string name="new_item">New Item</string>
    <string name="description">Description</string>
    <string name="create_item">Create Item</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
...
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="clear_search_button">Clear search</string>
    <string name="share">Share</string>
    <string name="txt_user_profile_picture">User Profile Picture</string>
    <string name="add_wishlist">Add to Wishlist</string>
    <string name="remove_wishlist">Remove from Wishlist</string>
    <string name="wishlist_menu_title">Wish List</string>
    <string name="enter_address">Enter Address</string>
    <string name="item">Item</string>
    <string name="userNotLoggedInInfo">You need to be logged in to view your User Profile.</string>
    <string name="userNotLoggedInCreateItem">You need to be logged in to create an item.</string>
    <string name="userNotLoggedInWishlist">You need to be logged in to access the wishlist.</string>
...
