...
            android:inputType="textMultiLine|textPersonName"
            android:singleLine="false"
            android:text="@={description}"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/createItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createNewItem"
            android:text="@string/create_item" />

    </LinearLayout>
...
